--- a/global/software/charts/kubernetes/core/apiserver.yaml
+++ b/global/software/charts/kubernetes/core/apiserver.yaml
@@ -130,7 +130,7 @@ data:
       - --authorization-mode=Node,RBAC
       - --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
       - --endpoint-reconciler-type=lease
-      - --feature-gates=PodShareProcessNamespace=true,SCTPSupport=true
+      - --feature-gates=PodShareProcessNamespace=true
   dependencies:
     - kubernetes-apiserver-htk
 ---
